--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,13 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="black">#FF222222</color>
+    <color name="gray5">#FF555555</color>
+    <color name="gray9">#FF999999</color>
+    <color name="greenUp">#FF3E8B57</color>
+    <color name="white">#FFF1F1F1</color>
+    <color name="loading_darker">#FFA33020</color>
+    <color name="golden_darker">#FFC9A802 </color>
+    <color name="loading">#FFF1F1F1</color>
+    <color name="golden">#FF184D7C</color>
 </resources>
